--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^27.0.2",
+    "@types/node": "^20.8.10",
     "jest": "^27.3.0",
     "npm-run-all": "^4.1.5",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.1487.0"
   }
 }
